<resources>
    <string name="app_name">Travelmantics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Travel deals</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_insert_deal">Edit travel deal</string>
    <string name="title_activity_wish_list">WishListActivity</string>
    <string name="my_account">My account</string>
    <string name="title_activity_trip_details">TripDetailsActivity</string>
    <string name="category">Category</string>
    <string name="trip_name">Trip name</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
    <string name="trip_image">Trip Image</string>
    <string name="discount">Discount</string>
    <string name="title_activity_account">Account Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login_to_account">Login to Account</string>
    <string name="password">Password</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email_address">Email address</string>
    <string name="country">Country</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="city">City</string>
    <string name="reviews">Reviews</string>
    <string name="insert_image">Insert Image</string>

    <string-array name="discounts">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
</resources>
