<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/list_trip_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark_transparent"
        tools:layout_conversion_absoluteHeight="100dp"
        tools:layout_conversion_absoluteWidth="100dp"
        android:contentDescription="@string/trip_image" />

    <TextView
        android:id="@+id/list_trip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/trip_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/list_trip_image"
        app:layout_constraintTop_toTopOf="@+id/list_trip_image"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="99dp" />

    <TextView
        android:id="@+id/list_trip_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/cost"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="57dp" />

    <TextView
        android:id="@+id/list_trip_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/country"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/list_trip_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/list_trip_name"
        app:layout_constraintTop_toBottomOf="@+id/list_trip_name"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="57dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>