<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TripDetailsActivity"
    tools:showIn="@layout/activity_trip_details">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_trip_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/trip_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/detail_trip_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/detail_trip_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/trip_name"
                android:textColor="@color/primary_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_trip_image" />

            <TextView
                android:id="@+id/detail_trip_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/country"
                android:textColor="@color/secondary_text"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="@+id/detail_trip_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detail_trip_name"
                app:layout_constraintTop_toBottomOf="@+id/detail_trip_name" />

            <TextView
                android:id="@+id/detail_trip_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_semibold"
                android:justificationMode="inter_word"
                android:text="@string/description"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_trip_country" />

            <TextView
                android:id="@+id/detail_trip_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/cost"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/detail_trip_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_trip_name" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/reviews"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/detail_trip_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="1dp"
                android:background="@color/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:listitem="@layout/comment_list_item" />

            <TextView
                android:id="@+id/detail_trip_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/detail_trip_cost"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/detail_trip_cost"
                app:layout_constraintTop_toBottomOf="@+id/detail_trip_cost" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>